--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@
             </li>
             <li class="doing-item">
               <img
-              srcset="./images/doing/img-3@1x.jpg 1x, ./images/doing/img-3@2x.jpg 2x"
+                srcset="
+                  ./images/doing/img-3@1x.jpg 1x,
+                  ./images/doing/img-3@2x.jpg 2x
+                "
                 src="./images/doing/img-3@1x.jpg"
                 alt="tablet"
                 width="360"
@@ -182,7 +185,10 @@
           <ul class="list team-list">
             <li class="team-item">
               <img
-                srcset="./images/team/img-1@1x.jpg 1x, ./images/team/img-1@2x.jpg 2x"
+                srcset="
+                  ./images/team/img-1@1x.jpg 1x,
+                  ./images/team/img-1@2x.jpg 2x
+                "
                 src="./images/team/img-1@1x.jpg"
                 alt="product-designer"
                 width="264"
@@ -235,7 +241,10 @@
             </li>
             <li class="team-item">
               <img
-              srcset="./images/team/img-2@1x.jpg 1x, ./images/team/img-2@2x.jpg 2x"
+                srcset="
+                  ./images/team/img-2@1x.jpg 1x,
+                  ./images/team/img-2@2x.jpg 2x
+                "
                 src="./images/team/img-2@1x.jpg"
                 alt="developer"
                 width="264"
@@ -288,7 +297,10 @@
             </li>
             <li class="team-item">
               <img
-              srcset="./images/team/img-3@1x.jpg 1x, ./images/team/img-3@2x.jpg 2x"
+                srcset="
+                  ./images/team/img-3@1x.jpg 1x,
+                  ./images/team/img-3@2x.jpg 2x
+                "
                 src="./images/team/img-3@1x.jpg"
                 alt="marketing"
                 width="264"
@@ -341,7 +353,10 @@
             </li>
             <li class="team-item">
               <img
-              srcset="./images/team/img-4@1x.jpg 1x, ./images/team/img-4@2x.jpg 2x"
+                srcset="
+                  ./images/team/img-4@1x.jpg 1x,
+                  ./images/team/img-4@2x.jpg 2x
+                "
                 src="./images/team/img-4@1x.jpg"
                 alt="ui-designer"
                 width="264"
@@ -638,6 +653,87 @@
     </div>
 
     <!-- Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="menu-toggle-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-mob-close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu list">
+        <li>
+          <a href="" class="link">About</a>
+        </li>
+        <li>
+          <a href="" class="link">Products</a>
+        </li>
+        <li>
+          <a href="" class="link">Contacts</a>
+        </li>
+      </ul>
+            <ul class="mobile-contacts list">
+        <li>
+          <a class="link" href="tel:">+11 (000) 111-11-11</a>
+        </li>
+        <li>
+          <a class="link" href="mailto:">info@devstudio.com</a>
+        </li>
+      </ul>
+           <ul class="mobile-socials list">
+        <li class="socials-item">
+          <a
+            class="socials-link link"
+            href="https://instagram.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Instagram icon"
+          >
+            <svg class="socials-icon" width="20" height="20">
+              <use href="./images/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a
+            class="socials-link link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Twitter icon"
+          >
+            <svg class="socials-icon" width="20" height="20">
+              <use href="./images/icons.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a
+            class="socials-link link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Facebook icon"
+          >
+            <svg class="socials-icon" width="20" height="20">
+              <use href="./images/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a
+            class="socials-link link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Linkedin icon"
+          >
+            <svg class="socials-icon" width="20" height="20">
+              <use href="./images/icons.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
