--- a/portfolio.html
+++ b/portfolio.html
@@ -88,15 +88,25 @@
               <button class="btn filter-btn">Marketing</button>
             </li>
           </ul>
-           <ul class="list card-list">
+          <ul class="list card-list">
             <li class="card-item">
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-1_356.jpg 356w,
+                      ./images/cards/img-1_360.jpg 360w,
+                      ./images/cards/img-1_396.jpg 396w,
+                      ./images/cards/img-1_712.jpg 712w,
+                      ./images/cards/img-1_720.jpg 720w,
+                      ./images/cards/img-1_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-1.jpg"
                     alt="Banking"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -118,10 +128,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-2_356.jpg 356w,
+                      ./images/cards/img-2_360.jpg 360w,
+                      ./images/cards/img-2_396.jpg 396w,
+                      ./images/cards/img-2_712.jpg 712w,
+                      ./images/cards/img-2_720.jpg 720w,
+                      ./images/cards/img-2_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-2.jpg"
                     alt="Cashless"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -141,10 +161,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-3_356.jpg 356w,
+                      ./images/cards/img-3_360.jpg 360w,
+                      ./images/cards/img-3_396.jpg 396w,
+                      ./images/cards/img-3_712.jpg 712w,
+                      ./images/cards/img-3_720.jpg 720w,
+                      ./images/cards/img-3_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-3.jpg"
                     alt="Meditation"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -164,10 +194,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-4_356.jpg 356w,
+                      ./images/cards/img-4_360.jpg 360w,
+                      ./images/cards/img-4_396.jpg 396w,
+                      ./images/cards/img-4_712.jpg 712w,
+                      ./images/cards/img-4_720.jpg 720w,
+                      ./images/cards/img-4_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-4.jpg"
                     alt="Taxi"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -187,10 +227,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-5_356.jpg 356w,
+                      ./images/cards/img-5_360.jpg 360w,
+                      ./images/cards/img-5_396.jpg 396w,
+                      ./images/cards/img-5_712.jpg 712w,
+                      ./images/cards/img-5_720.jpg 720w,
+                      ./images/cards/img-5_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-5.jpg"
                     alt="Screen Illustrations"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -210,10 +260,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-6_356.jpg 356w,
+                      ./images/cards/img-6_360.jpg 360w,
+                      ./images/cards/img-6_396.jpg 396w,
+                      ./images/cards/img-6_712.jpg 712w,
+                      ./images/cards/img-6_720.jpg 720w,
+                      ./images/cards/img-6_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-6.jpg"
                     alt="Online Courses"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -233,10 +293,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                    srcset="
+                      ./images/cards/img-7_356.jpg 356w,
+                      ./images/cards/img-7_360.jpg 360w,
+                      ./images/cards/img-7_396.jpg 396w,
+                      ./images/cards/img-7_712.jpg 712w,
+                      ./images/cards/img-7_720.jpg 720w,
+                      ./images/cards/img-7_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-7.jpg"
                     alt="Instagram Stories"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -258,10 +328,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                    srcset="
+                      ./images/cards/img-8_356.jpg 356w,
+                      ./images/cards/img-8_360.jpg 360w,
+                      ./images/cards/img-8_396.jpg 396w,
+                      ./images/cards/img-8_712.jpg 712w,
+                      ./images/cards/img-8_720.jpg 720w,
+                      ./images/cards/img-8_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-8.jpg"
                     alt="Organic Food"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
@@ -281,10 +361,20 @@
               <a class="link card-link" href="">
                 <div class="card-box">
                   <img
+                                      srcset="
+                      ./images/cards/img-9_356.jpg 356w,
+                      ./images/cards/img-9_360.jpg 360w,
+                      ./images/cards/img-9_396.jpg 396w,
+                      ./images/cards/img-9_712.jpg 712w,
+                      ./images/cards/img-9_720.jpg 720w,
+                      ./images/cards/img-9_792.jpg 792w
+                    "
+                    sizes="(min-width: 1158px) 360w,(min-width: 768px) 356w, (min-width: 428px) 396w, 100vw"
                     src="./images/cards/img-9.jpg"
                     alt="Fresh Coffee"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <p class="overlay-label">
