--- a/index.html
+++ b/index.html
@@ -660,80 +660,55 @@
         </svg>
       </button>
       <ul class="mobile-menu list">
-        <li>
-          <a href="" class="link">About</a>
+        <li class="title">
+          <a href="" class="link  mobile-link active">Studio</a>
         </li>
-        <li>
-          <a href="" class="link">Products</a>
+        <li class="title">
+          <a href="" class="link mobile-link">Portfolio</a>
         </li>
-        <li>
-          <a href="" class="link">Contacts</a>
-        </li>
-      </ul>
-            <ul class="mobile-contacts list">
-        <li>
-          <a class="link" href="tel:">+11 (000) 111-11-11</a>
-        </li>
-        <li>
-          <a class="link" href="mailto:">info@devstudio.com</a>
+        <li class="title">
+          <a href="" class="link mobile-link">Contacts</a>
         </li>
       </ul>
-           <ul class="mobile-socials list">
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href="https://instagram.com"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Instagram icon"
-          >
-            <svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#instagram"></use>
+      <ul class="mobile-contacts list">
+        <li class="mobile-item title">
+          <a class="link mobile-link active" href="tel:">+11 (000) 111-11-11</a>
+        </li>
+        <li class="mobile-item subtitle">
+          <a class="link mobile-link" href="mailto:">info@devstudio.com</a>
+        </li>
+      </ul>
+      <ul class="list mobile-socials">
+        <li class="social-item">
+          <a class="link link-social" href="https://www.instagram.com/">
+            <svg class="social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-instagram-1"></use>
             </svg>
           </a>
         </li>
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Twitter icon"
-          >
-            <svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#twitter"></use>
+        <li class="social-item">
+          <a class="link link-social" href="https://x.com/">
+            <svg class="social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
             </svg>
           </a>
         </li>
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Facebook icon"
-          >
-            <svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#facebook"></use>
+        <li class="social-item">
+          <a class="link link-social" href="https://www.facebook.com/">
+            <svg class="social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
             </svg>
           </a>
         </li>
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Linkedin icon"
-          >
-            <svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#linkedin"></use>
+        <li class="social-item">
+          <a class="link link-social" href="https://www.linkedin.com/feed//">
+            <svg class="social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
             </svg>
           </a>
         </li>
       </ul>
     </div>
-    
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
